Mark article as featured

--- a/data/blog/en/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
+++ b/data/blog/en/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
@@ -6,7 +6,7 @@ language: en
 tags: ['laravel', 'php', 'javascript', 'typescript', 'nextjs', 'fullstack']
 authors: ['default']
 draft: false
-featured: false
+featured: true
 summary: In this article we'll see the key points to handle the authentication process with Laravel Sanctum when using SSR in Next.js.
 ---
 
