--- a/data/blog/es/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
+++ b/data/blog/es/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
@@ -6,7 +6,7 @@ language: es
 tags: ['laravel', 'php', 'javascript', 'typescript', 'nextjs', 'fullstack']
 authors: ['default']
 draft: false
-featured: false
+featured: true
 summary: En este artículo veremos los puntos clave para manejar el proceso de autenticación con Laravel Sanctum al utilizar SSR en Next.js.
 ---
 
