--- a/data/blog/en/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
+++ b/data/blog/en/integrating-laravel-sanctum-with-nextjs-ssr-key-points.mdx
@@ -171,7 +171,7 @@ In production, it is advisable to eliminate all the local domains (`localhost`, 
 
 Here comes the fun part.
 
-### Variables de entorno
+### Environment variables
 
 Initially, only the backend URL is needed. We'll call this variable `NEXT_PUBLIC_BACKEND_URL`. The `NEXT_PUBLIC` prefix is added so that the variable is available in client components, although it will also be used in the server.
 
