--- a/data/blog/en/katas-sustainable-testing-ts/kata-01-testing-library.mdx
+++ b/data/blog/en/katas-sustainable-testing-ts/kata-01-testing-library.mdx
@@ -13,7 +13,7 @@ featured: false
 summary: In this article of the "Sustainable Testing Katas in TypeScript", we'll see how to create a simple testing library, similar to Jest or Vitest.
 ---
 
-> The katas of this series are proposed exercises in the excelent course [Testing Sostenible con TypeScript](https://academy.softwarecrafters.io/p/curso) by Miguel A. Gómez and Carlos Blé
+> The katas of this series are proposed exercises in the excellent course [Testing Sostenible con TypeScript](https://academy.softwarecrafters.io/p/curso) by Miguel A. Gómez and Carlos Blé
 
 ## Introduction
 
