--- a/data/blog/en/katas-sustainable-testing-ts/kata-02-fizzbuzz.mdx
+++ b/data/blog/en/katas-sustainable-testing-ts/kata-02-fizzbuzz.mdx
@@ -13,7 +13,7 @@ featured: false
 summary: In this article of the series "Sustainable Testing Katas in TypeScript", we'll see how to implement the classic FizzBuzz problem using TDD and Jest.
 ---
 
-> The katas of this series are proposed exercises in the excelent course [Testing Sostenible con TypeScript](https://academy.softwarecrafters.io/p/curso) by Miguel A. Gómez and Carlos Blé
+> The katas of this series are proposed exercises in the excellent course [Testing Sostenible con TypeScript](https://academy.softwarecrafters.io/p/curso) by Miguel A. Gómez and Carlos Blé
 
 ## Introduction
 
