Fix typo in article title

--- a/data/blog/en/katas-sustainable-testing-ts/kata-03-camel-case-converter.mdx
+++ b/data/blog/en/katas-sustainable-testing-ts/kata-03-camel-case-converter.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Kata 03 with TypeScript: CamelCase Converter"
+title: "Kata 03 in TypeScript: CamelCase Converter"
 series:
   order: 3
   title: "Sustainable Testing Katas in TypeScript"
