--- a/data/blog/en/katas-sustainable-testing-ts/kata-08-fibonacci.mdx
+++ b/data/blog/en/katas-sustainable-testing-ts/kata-08-fibonacci.mdx
@@ -10,7 +10,7 @@ tags: ['testing', 'tdd', 'javascript', 'typescript']
 authors: ['default']
 draft: false
 featured: false
-summary: En este artículo de la serie "Sustainable Testing Katas in TypeScript", analizaremos la creación de una función que calcula el enésimo número de Fibonacci usando TDD y Jest.
+summary: In this article of the series "Sustainable Testing Katas in TypeScript", we'll analyze the creation of a function that calculates the nth Fibonacci number using TDD and Jest.
 ---
 
 > The katas of this series are proposed exercises in the excellent course [Testing Sostenible con TypeScript](https://academy.softwarecrafters.io/p/curso) by Miguel A. Gómez and Carlos Blé
