--- a/data/blog/en/katas-sustainable-testing-ts/kata-09-prime-factors.mdx
+++ b/data/blog/en/katas-sustainable-testing-ts/kata-09-prime-factors.mdx
@@ -155,7 +155,7 @@ function findSmallestPrime(number: number) {
 
 - **Controlled Iteration.** We start with simple cases and move towards more complex situations. Every step is guided by tests that validate the functionality. 
 
-- **Recursion over Iteration.** We introduce recursin before iteration, following TPP suggestions, which simplifies the logic and facilitates handling of complex cases.
+- **Recursion over Iteration.** We introduce recursion before iteration, following TPP suggestions, which simplifies the logic and facilitates handling of complex cases.
 
 - **Refactoring and Clarity.** At the end, we refactor to improve code readability and clarity, separating responsibilities in independent functions.
 
