fix typo in article

--- a/data/blog/en/using-redis-for-caching-in-laravel-a-step-by-step-guide.mdx
+++ b/data/blog/en/using-redis-for-caching-in-laravel-a-step-by-step-guide.mdx
@@ -22,7 +22,7 @@ Make sure you have Redis installed on your computer. You can use [Docker's offic
 
 ## Installing Redis in Laravel
 
-So far we have simply installed the Redis server in our computer, but we need to have a way to connect from a PHP application. For this there are two options, using [phpredis](https://github.com/phpredis/phpredis), a PHP extension, or [predis](https://github.com/predis/predis), a library. None is better than the other, they just have different objectives and scopes. `phpredis` has the advantage that it allows you to connect to Redis from any PHP project that is executed in that computer, whereas `phpredis`, being a library, only allows to connect from the projects where it's installed. In my case, I have experience with `phpredis`, so let's see how to install it.
+So far we have simply installed the Redis server in our computer, but we need to have a way to connect from a PHP application. For this there are two options, using [phpredis](https://github.com/phpredis/phpredis), a PHP extension, or [predis](https://github.com/predis/predis), a library. None is better than the other, they just have different objectives and scopes. `phpredis` has the advantage that it allows you to connect to Redis from any PHP project that is executed in that computer, whereas `predis`, being a library, only allows to connect from the projects where it's installed. In my case, I have experience with `phpredis`, so let's see how to install it.
 
 ### Installing phpredis
 
